# cg_example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt  app.cpp  rasterization.cpp
include/: camera.h  color.h  hittable.h  image.h  light.h  material.h  mesh.h  ray.h
src/: CMakeLists.txt  camera.cpp  camera.h  color.h  hittable.cpp  hittable.h  image.cpp  image.h  light.cpp  main.cpp  material.cpp  mesh.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  vec.h
